fixing menu styles on tablet sizes

--- a/app/styles/app.less
+++ b/app/styles/app.less
@@ -529,6 +529,15 @@ a {
     padding-top: 6em;
   }
 
+  #top-nav {
+    text-align: left;
+    z-index: 500;
+
+    img {
+      padding-top: 4px;
+    }
+  }
+
 
   .form-group {
     margin-bottom: 0;
